--- a/pages/music.html
+++ b/pages/music.html
@@ -28,48 +28,48 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Music</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
-                          Store
-                        </a>
-                        <ul class="dropdown-menu store-menu">
-                          <li class="nav-item">
-                            <a class="nav-link" href="store.html">Storefront</a>
-                          </li>
-                          <li class="sub-menu">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-                              Collections
-                            </a>
-                            <ul class="dropdown-menu store-menu">
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col4.html">Carnival of Insanity</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
-                            </ul>
-                          </li>
-                          <li class="sub-menu">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"> 
-                              Categories
-                            </a>
-                            <ul class="dropdown-menu store-menu">
-                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
-                            </ul>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="Store_Subpages/all.html">All</a>
-                          </li>
-                        </ul>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="tour.html">Tour</a>
                     </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
+                        Store
+                      </a>
+                      <ul class="dropdown-menu store-menu">
+                        <li class="nav-item">
+                          <a class="nav-link" href="store.html">Storefront</a>
+                        </li>
+                        <li class="sub-menu">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+                            Collections
+                          </a>
+                          <ul class="dropdown-menu store-menu">
+                            <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
+                            <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
+                            <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
+                            <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col4.html">Painted Face</a></li>
+                            <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
+                            <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
+                          </ul>
+                        </li>
+                        <li class="sub-menu">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"> 
+                            Categories
+                          </a>
+                          <ul class="dropdown-menu store-menu">
+                            <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
+                            <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
+                            <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
+                            <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
+                            <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
+                            <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
+                          </ul>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="Store_Subpages/all.html">All</a>
+                        </li>
+                      </ul>
+                  </li>
                     <li class="nav-item">
                       <a class="nav-link" href="checkout.html">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
@@ -88,87 +88,57 @@
 
          <!--Cards-->
 
-         <div id="customThing" class="card mb-3 p-1">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../images/GbNF.png" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title"><strong>Gone But Not Forgotten</strong></h5>
-                <p class="card-text">Here is our most recent album!</p>
+         <div class="container-fluid card-container">
+          <div class="card mb-3 p-3 my-4 mx-4">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="../images/GbNF.png" class="img-fluid rounded-start" alt="...">
               </div>
-            </div>
-          </div>
-        </div>
-      
-        <div class="row row-cols-1 row-cols-md-3 g-4 p-2 m-2 ">
-          <div class="col my-3">
-            <div class="card h-100 p-2 ">
-              <img src="../images/vp.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Venomous Predator</h5>
-                <p class="card-text">This is the first album.</p>
-                <a href="../pages/Store_Subpages/Collections_Pages/col1.html" class="btn btn-primary">Album Merchandise</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col my-3">
-            <div class="card h-100 p-2">
-              <img src="../images/oal.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">On a Ledge</h5>
-                <p class="card-text">This is the second album.</p>
-                <a href="../pages/Store_Subpages/Collections_Pages/col2.html" class="btn btn-primary">Album Merchandise</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col my-3">
-            <div class="card h-100 p-2">
-              <img src="../images/la.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Locked Away</h5>
-                <p class="card-text">This is the third album.</p>
-                <a href="../pages/Store_Subpages/Collections_Pages/col3.html" class="btn btn-primary">Album Merchandise</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col my-3">
-            <div class="card h-100 p-2">
-              <img src="../images/CoI.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Carnival of Insanity</h5>
-                <p class="card-text">This is the fourth album.</p>
-                <a href="../pages/Store_Subpages/Collections_Pages/col4.html" class="btn btn-primary">Album Merchandise</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col my-3">
-              <div class="card h-100 p-2">
-                <img src="../images/dol.png" class="card-img-top" alt="...">
+              <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Devoid of Light</h5>
-                  <p class="card-text">This is the fifth album.</p>
-                  <a href="../pages/Store_Subpages/Collections_Pages/col5.html" class="btn btn-primary">Album Merchandise</a>
+                  <h5 class="card-title"><strong>Gone But Not Forgotten</strong></h5>
+                  <p class="card-text">Here is our most recent album!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+          <div class="row">
+
+            <div class="col my-3 mx-4">
+              <div class="card h-100 p-2">
+                <img src="../images/oal.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">On a Ledge</h5>
+                  <p class="card-text">This is our first album.</p>
+                  <a href="../pages/Store_Subpages/Collections_Pages/col2.html" class="btn btn-primary">Album Merchandise</a>
                 </div>
               </div>
             </div>
 
             <div class="col my-3">
               <div class="card h-100 p-2">
-                <img src="../images/gbnf.png" class="card-img-top" alt="...">
+                <img src="../images/CoI.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Gone But Not Forgotten</h5>
-                  <p class="card-text">This is the sixth and our most recent album.</p>
-                  <a href="../pages/Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Album Merchandise</a>
+                  <h5 class="card-title">Carnival of Insanity</h5>
+                  <p class="card-text">This is our second album.</p>
+                  <a href="../pages/Store_Subpages/Collections_Pages/col4.html" class="btn btn-primary">Album Merchandise</a>
                 </div>
               </div>
             </div>
-        </div>
+
+              <div class="col my-3 mx-4">
+                <div class="card h-100 p-2">
+                  <img src="../images/GBNF-album.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Gone But Not Forgotten</h5>
+                    <p class="card-text">This is the third and our most recent album.</p>
+                    <a href="../pages/Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Album Merchandise</a>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </div>  
 
         <script src="../js/bootstrap.bundle.js"></script>
     </body>
